# paperless

./: .clang-format  .gitignore  CMakeLists.txt  README.md  artificial_workload_benchmark.sh  benchmark.sh  benchmark_cluster.sh  benchmark_op_times.sh  benchmark_seq_vs_rel.sh  benchmark_submit_all.sh  benchmark_submit_n_host_multiple_jobs.sh  benchmark_throughput.sh  benchmark_throughput_only_one.sh  benchmark_throughput_storage.sh  benchmark_value_size_comp.sh  build.sh  cache_cmp.sh  error  install_mtbl.sh  install_papyrus.sh  install_upc.sh  load_modules.sh  main.cpp  perf.sh  runMpiTests.sh  sandbox.sh  seq_vs_rel_benchmark.sh  submit_all_benchmarks.sh  throughtput.sh  value_size_comp.sh
0/sstables/: 11  17
1/sstables/: 10  11
analytics/: KV_plots.py  environment.yml  runNotebook.sh  setupNotebook.sh
analytics/data/: dowloadData.sh  getData.sh
analytics/data/512MB/1/: get0.txt  put0.txt
analytics/data/512MB/16/: get0.txt  get1.txt  get10.txt  get11.txt  get12.txt  get13.txt  get14.txt  get15.txt  get2.txt  get3.txt  get4.txt  get5.txt  get6.txt  get7.txt  get8.txt  get9.txt  put0.txt  put1.txt  put10.txt  put11.txt  put12.txt  put13.txt  put14.txt  put15.txt  put2.txt  put3.txt  put4.txt  put5.txt  put6.txt  put7.txt  put8.txt  put9.txt
analytics/data/512MB/2/: get0.txt  get1.txt  put0.txt  put1.txt
analytics/data/512MB/20/: get0.txt  get1.txt  get10.txt  get11.txt  get12.txt  get13.txt  get14.txt  get15.txt  get16.txt  get17.txt  get18.txt  get19.txt  get2.txt  get3.txt  get4.txt  get5.txt  get6.txt  get7.txt  get8.txt  get9.txt  put0.txt  put1.txt  put10.txt  put11.txt  put12.txt  put13.txt  put14.txt  put15.txt  put16.txt  put17.txt  put18.txt  put19.txt  put2.txt  put3.txt  put4.txt  put5.txt  put6.txt  put7.txt  put8.txt  put9.txt
analytics/data/512MB/4/: get0.txt  get1.txt  get2.txt  get3.txt  put0.txt  put1.txt  put2.txt  put3.txt
analytics/data/512MB/8/: get0.txt  get1.txt  get2.txt  get3.txt  get4.txt  get5.txt  get6.txt  get7.txt  put0.txt  put1.txt  put2.txt  put3.txt  put4.txt  put5.txt  put6.txt  put7.txt
analytics/data/8MB/1/: get0.txt  put0.txt
analytics/data/8MB/16/: get0.txt  get1.txt  get10.txt  get11.txt  get12.txt  get13.txt  get14.txt  get15.txt  get2.txt  get3.txt  get4.txt  get5.txt  get6.txt  get7.txt  get8.txt  get9.txt  put0.txt  put1.txt  put10.txt  put11.txt  put12.txt  put13.txt  put14.txt  put15.txt  put2.txt  put3.txt  put4.txt  put5.txt  put6.txt  put7.txt  put8.txt  put9.txt
analytics/data/8MB/2/: get0.txt  get1.txt  put0.txt  put1.txt
analytics/data/8MB/20/: get0.txt  get1.txt  get10.txt  get11.txt  get12.txt  get13.txt  get14.txt  get15.txt  get16.txt  get17.txt  get18.txt  get19.txt  get2.txt  get3.txt  get4.txt  get5.txt  get6.txt  get7.txt  get8.txt  get9.txt  put0.txt  put1.txt  put10.txt  put11.txt  put12.txt  put13.txt  put14.txt  put15.txt  put16.txt  put17.txt  put18.txt  put19.txt  put2.txt  put3.txt  put4.txt  put5.txt  put6.txt  put7.txt  put8.txt  put9.txt
analytics/data/8MB/4/: get0.txt  get1.txt  get2.txt  get3.txt  put0.txt  put1.txt  put2.txt  put3.txt
analytics/data/8MB/40/: get0.txt  get1.txt  get10.txt  get11.txt  get12.txt  get13.txt  get14.txt  get15.txt  get16.txt  get17.txt  get18.txt  get19.txt  get2.txt  get20.txt  get21.txt  get22.txt  get23.txt  get24.txt  get25.txt  get26.txt  get27.txt  get28.txt  get29.txt  get3.txt  get30.txt  get31.txt  get32.txt  get33.txt  get34.txt  get35.txt  get36.txt  get37.txt  get38.txt  get39.txt  get4.txt  get5.txt  get6.txt  get7.txt  get8.txt  get9.txt  (+40 more)
analytics/data/8MB/8/: get0.txt  get1.txt  get2.txt  get3.txt  get4.txt  get5.txt  get6.txt  get7.txt  put0.txt  put1.txt  put2.txt  put3.txt  put4.txt  put5.txt  put6.txt  put7.txt
analytics/data/IprobeExperimentEuler/16/: get15.txt  get2.txt  get5.txt  get6.txt  get7.txt  get8.txt  get9.txt  put0.txt  put1.txt  put11.txt  (+7 more)
analytics/data/mulitThreadRecv/: eulerOutput.txt
analytics/data/throughput/: 5PercentPuts.txt  5PercentPutsLessInserts.txt  betterCache.txt  betterCache4.txt  out.txt  out2.txt  out3.txtx  out4.txt
perfs/: perf1.txt
src/: BloomFilter.cpp  BloomFilter.h  CircularNonBlockingQueue.cpp  CircularNonBlockingQueue.h  Common.h  Communicator.cpp  Communicator.h  Element.cpp  Element.h  ElementWithTombstone.h  FutureQueryInfo.h  FutureQueryResult.h  LRUCache.cpp  LRUCache.h  LRUHashCache.cpp  LRUHashCache.h  LRUTreeCache.cpp  LRUTreeCache.h  ListQueue.h  ListWriteBuffer.h  MemoryTable.cpp  MemoryTable.h  MemoryTableManager.cpp  MemoryTableManager.h  Message.h  PaperlessKV.cpp  PaperlessKV.h  RBTreeMemoryTable.cpp  RBTreeMemoryTable.h  RemoteOperator.cpp  RemoteOperator.h  Responder.cpp  Responder.h  Status.h  StatusOr.cpp  StatusOr.h  StorageManager.cpp  StorageManager.h  Types.h  zResponder
src/benchmark/: KVWrapper.h  MtmThreadedLoad.h  OptionReader.cpp  OptionReader.h  basic.cpp  c_interface.cpp  c_interface.h  cmp_vector_benchmark.cpp  helper.h  mpi_probe_multiple_threads.cpp  mpi_probe_multiple_threads.sh  mtm_comparison.cpp  mtm_comparison.sh  mtm_threaded_load.cpp  multThread_recv.sh  paperless.i  papyrus.i  run_cmp_bench.sh  theGreatBenchmark.cpp  throughput.cpp  timer.h  workload.cpp
src/benchmark/meraculous/: Debug.h  Kmer.hpp  LICENSE.txt  README.APEX  README.txt  UU_traversal_final.h  buildUFXhashBinary.h  euler_small.sh  example_large.pbs  example_medium.pbs  example_small.pbs  example_small_cori.slurm  hello_world.c  kmer_handling.h  kmer_hash.h  loadModules  loadModules.cray  makefile  makefile.orig  meraculous.c  meraculous.h  packingDNAseq.h  readufx.cpp  readufx.h  result.txt  stats.human-25pct_test  wtimer.c  wtimer.h
src/mpitests/: PaperLessKVFriend.h  PaperlessKVRandomTest.cpp  PaperlessKVStressTest.cpp  PaperlessKVTest.cpp  mpi_tests_main.cpp
src/tests/: BloomFilterTests.cpp  ElementTests.cpp  LRUHashTests.cpp  LRUTests.cpp  LRUTreeTests.cpp  ListQueueTests.cpp  ListWriteBufferTests.cpp  MemoryTableManagerTests.cpp  PaperlessKVTest.cpp  RBTreeMemoryTableTests.cpp  StatusOrTests.cpp  StorageManagerTests.cpp  TestUtils.cpp  TestUtils.h  tests_main.cpp
(+60160 files in other folders)
